# in-progress-stuff

./: .env.example  .gitignore  AI ML Intern project.md  CLAUDE_CODE_COMMAND_PACKET.md  EVALUATION_REPORT.md  LESSONS_LEARNED.md  README.md  SETUP.md  check_am10.py  check_db.py  check_em90.py  check_fs2se.py  debug.ps1  debug_retrieval.py  docker-compose.yml  evaluation_report_full.json  evaluation_report_small.json  implementation_plan.md  interactive.py  logs.md  migrate_db.py  migrate_vector.py  pyproject.toml  run_ui.py  start.ps1  test_api.py  test_defense.py  test_etl_fixes.py  test_mcp_client.py  test_query_engine.py  verify_fixes.py  walkthrough.md  walkthrough.md.resolved  walkthrough_resolved.md
.context/: claude.md
data/processed/: .gitkeep
data/raw_pdfs/: .gitkeep
db/: schema.sql
src/: __init__.py  config.py  database.py
src/api/: main.py
src/etl/: __init__.py  extractor.py  loader.py  normalizer.py  pipeline.py  synthesizer.py
src/logic/: __init__.py  calculator.py
src/rag/: __init__.py  embeddings.py  engine.py  generator.py  retrieval.py  router.py
src/server/: __init__.py  main.py  tools.py
src/ui/: app.js  index.html  style.css
tests/: golden_set.json  golden_set_small.json  run_accuracy.py
